--- a/Home Page/styles/index.css
+++ b/Home Page/styles/index.css
@@ -6,22 +6,24 @@ body{
 }
 #Top-Black{
     width: 100%;
-    height: 50px;
+    height: 60px;
     display: flex;
     background-color: black;
 }
 #Top-Black-head{
     color: white;
+    font-weight: 550;
     padding-left: 390px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-size: 13px;
+    padding-top: 5px;
 }
 #Top-Black-button{
-    width: 100px;
-    height: 40px;
-    font-size: small;
-    margin-left: 20px;
-    margin-top: 5px;
+    width: 80px;
+    height: 30px;
+    font-size: 12px;
+    margin-left: 10px;
+    margin-top: 16px;
     border-radius: 5px;
     font-family: 'Open Sans', sans-serif;
     color: red;
@@ -35,3 +37,327 @@ body{
     text-decoration: underline;
     cursor: pointer;
 }
+#navbar{
+    display: flex;
+    width: 80%;
+    height: 80px;
+    margin: auto;
+    font-family: 'Open Sans', sans-serif;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+.nav-head{
+    text-align: justify;
+    padding-left: 30px;
+    padding-top: 15px;
+    font-size: small;
+}
+#nav-course{
+    padding-left: 130px;
+}
+.nav-head:hover{
+    color: #ed0331;
+}
+.nav-logo{
+    width: 100px;
+}
+.nav-but1{
+    width: 200px;
+    height: 45px;
+    background-color: #ed0331;
+    color: white;
+    border: 1px solid #ed0331;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 100px;
+    cursor: pointer;
+}
+.nav-but1:hover{
+    background-color: #940a26;
+}
+.nav-but2{
+    width: 80px;
+    height: 45px;
+    background-color: white;
+    color: #ed0331;
+    border: 1px solid #ed0331;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 40px;
+    cursor: pointer;
+}
+.nav-but2:hover{
+    background-color:rgb(255, 193, 202);
+}
+#prepleaf{
+    width: 100%;
+    height: 220px;
+    background-color: #fedfe5;
+}
+#prepleaf > img{
+    width: 80%;
+    margin: auto;
+    margin-left: 180px;
+    height: 220px;
+    cursor: pointer;
+}
+#register-for-now{
+    width: 40%;
+    margin: auto;
+    height: 300px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+}
+.register-for-now-head{
+    font-size: 40px;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
+    line-height: 20px;
+    text-align: center;
+}
+#apply-now-for-free{
+    height: 45px;
+    border-radius: 5px;
+    background-color: #ed0331;
+    color: white;
+    border: 1px solid #ed0331;
+    width: 250px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.register-for-now-img{
+    line-height: 5px;
+    line-height: 5px;
+    margin-top: -35px;
+}
+.register-for-now-para1{
+    color: gray;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: large;
+    line-height: 5px;
+    padding-top: 10px;
+}
+.register-for-now-para2{
+    line-height: 5px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight:bolder;
+    font-size: larger;
+}
+#people-slide > img{
+    margin-top: 50px;
+}
+#haveadream{
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding-top: 30px;
+    line-height: 15px;
+}
+#haveadream > h3{
+    color: rgb(63, 62, 62);
+    font-size: x-large;
+}
+#haveadream > h1{
+    font-size: xx-large;
+}
+#company-slide{
+    width: 100%;
+}
+#company-slide1{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 60px;
+    
+}
+#company-slide1 > img{
+    width: 100%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;    border-radius: 10px;
+    margin-top: 30px;
+}
+#company-slide2{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 60px;
+    margin-left: 90px;
+}
+#company-slide2 > img{
+    width: 100%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;    border-radius: 10px;
+    margin-top: 40px;
+}
+#peoplegotplaced{
+    margin-top: 30px;
+    display: grid;
+    width: 80%;
+    margin: auto;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+}
+#peoplegotplaced > div > img{
+    width: 100%;
+    border-radius: 20px;
+}
+#peoplegotplaced>div{
+    margin-top: 50px;
+    border-radius: 20px;
+}
+.peoplegotplaced-card1 > div{
+    border-radius: 20px;
+    height: 200px;
+    margin-top: -20px;
+    background-color: #eefff7;
+}
+.peoplegotplaced-card2 > div{
+    border-radius: 20px;
+    height: 200px;
+    margin-top: -20px;
+    background-color: #f7f7ff;
+}
+.peoplegotplaced-card3 > div{
+    border-radius: 20px;
+    height: 200px;
+    margin-top: -20px;
+    background-color: #f6ede7;
+}
+.peoplegotplaced-card4 > div{
+    border-radius: 20px;
+    height: 200px;
+    margin-top: -20px;
+    background-color: #f2f7ff;
+}
+.peoplegotplaced-card1-div1 > p{
+    padding-left: 25px;
+    line-height: 20px;
+    color: gray;
+    padding-right: 10px;
+    margin-top: -50px;
+}
+.peoplegotplaced-card1-div1 > h4{
+    padding-left: 25px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    padding-right: 10px;
+}
+.peoplegotplaced-card1-div1 > img{
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+.peoplegotplaced-card1-div1 > h1{
+    color: #6fcd9e;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-family: 'Open Sans', sans-serif;
+}
+.peoplegotplaced-card1-div2 > p{
+    padding-left: 25px;
+    color: gray;
+    padding-right: 10px;
+    line-height: 20px;
+    margin-top: -50px;
+}
+.peoplegotplaced-card1-div2 > h4{
+    padding-left: 25px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    padding-right: 10px;
+}
+.peoplegotplaced-card1-div2 > img{
+    padding-left: 15px;
+    padding-right: 10px;
+    width: 100px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+.peoplegotplaced-card1-div2 > h1{
+    color: rgb(76, 76, 172);
+    padding-left: 5px;
+    padding-top: 5px;
+    font-family: 'Open Sans', sans-serif;
+}
+.peoplegotplaced-card1-div3 > p{
+    padding-left: 25px;
+    color: gray;
+    line-height: 20px;
+    padding-right: 10px;
+    margin-top: -50px;
+}
+.peoplegotplaced-card1-div3 > h4{
+    padding-left: 25px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    padding-right: 10px;
+}
+.peoplegotplaced-card1-div3 > img{
+    padding-right: 10px;
+    padding-left: 10px;
+    width: 80px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+.peoplegotplaced-card1-div3 > h1{
+    color: burlywood;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-family: 'Open Sans', sans-serif;
+}
+.peoplegotplaced-card1-div4 > p{
+    padding-left: 25px;
+    line-height: 20px;
+    color: gray;
+    padding-right: 10px;
+    margin-top: -50px;
+}
+.peoplegotplaced-card1-div4 > h4{
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-top: 40px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+}
+.peoplegotplaced-card1-div4 > img{
+    padding-right: 10px;
+    width: 100px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+.peoplegotplaced-card1-div4 > h1{
+    color: dodgerblue;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-family: 'Open Sans', sans-serif;
+}
+#trustmasai{
+    margin-top: 40px;
+    padding-top: 20px;
+    line-height: 15px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+}
+#peoplegotplaced-button{
+    background-color: #ed0331;
+    width: 250px;
+    color: white;
+    height: 50px;
+    border: 1px solid #ed0331;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-left: 650px;
+    font-weight: 700;
+    padding-top: 7px;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+#peoplegotplaced-button:hover{
+    background-color: #940a26;
+}
+
+
+
+/* Scroll */
